chnages in requiremnets.txt i.e tourch

--- a/requirements-streamlit.txt
+++ b/requirements-streamlit.txt
@@ -1,3 +1,6 @@
+# Streamlit Cloud optimized requirements
+# This file is specifically optimized for Streamlit Cloud deployment
+
 # Core web framework
 streamlit>=1.28.0
 
@@ -6,17 +9,17 @@ requests>=2.31.0
 pandas>=2.0.3
 numpy>=1.26.0
 
-# Machine learning and NLP (optimized for deployment)
+# Machine learning and NLP (lightweight for cloud)
 scikit-learn>=1.3.0
 sentence-transformers>=2.2.2
 transformers>=4.30.0
-torch>=2.0.0
+torch>=2.5.0
 google-generativeai>=0.3.2
 
 # PDF processing
 PyPDF2>=3.0.1
 
-# Vector storage for embeddings
+# Vector storage for embeddings (CPU only for cloud)
 faiss-cpu>=1.7.4
 
 # Additional dependencies for text processing
@@ -33,9 +36,7 @@ plotly>=6.2.0
 # Natural language processing utilities
 nltk>=3.9.1
 
-# OCR capabilities (optional)
-pytesseract>=0.3.10
-pdf2image>=1.16.3
+# Image processing (lighter versions for cloud)
 Pillow>=10.1.0
 
 # Additional dependencies for embeddings
@@ -43,6 +44,3 @@ huggingface-hub>=0.17.3
 
 # Environment management
 python-dotenv>=1.0.0
-
-# Security and performance
-watchdog>=3.0.0
