--- a/requirements-minimal.txt
+++ b/requirements-minimal.txt
@@ -13,7 +13,7 @@ numpy>=1.26.0
 scikit-learn>=1.3.0
 google-generativeai>=0.3.2
 
-# PDF processing
+# PDF processing (required for Q&A)
 PyPDF2>=3.0.1
 
 # Text processing
