--- a/requirements-streamlit.txt
+++ b/requirements-streamlit.txt
@@ -42,5 +42,9 @@ Pillow>=10.1.0
 # Additional dependencies for embeddings
 huggingface-hub>=0.17.3
 
+# LangChain for Q&A functionality
+langchain>=0.1.0
+langchain-community>=0.0.20
+
 # Environment management
 python-dotenv>=1.0.0
